src/styles.css
/* ... */
body {
  font-family: 'Mono';
  font-size: 12px;
  color: #eee;
  margin: 0px;
  background-color: #222;
}

button {
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  background: none;
  border: none;
  outline: none;
  cursor: pointer;
}

button:hover, button:active, button:focus {
  text-decoration: underline;
}

svg {
  pointer-events: none;
}

table {
  border-spacing: 2px 0;
}

th {
  text-align: left;
  border-bottom: 1px solid #888;
  height: 20px;
}

td {
  vertical-align: center;
  height: 20px;
  color: #bbb;
}

td button {
  display: flex;
}

input[type=text], input[type=password], input[type=search] {
  font-family: inherit;
  font-size: inherit;
  background-color: #222;
  color: #eee;
  border: none;
}

input[type=search] {
  padding-left: 5px;
}

input[type=search]:focus {
  border: none;
  outline: none;
}

input[type=text]:focus, input[type=password]:focus {
  background-color: #222;
  border: none;
  outline: none;
}

input[type=search]::-webkit-search-cancel-button, input[type=search]::-webkit-search-decoration { /*remove clear button from search bar*/
  -webkit-appearance: none;
  appearance: none;
}

input[type=radio] {
  -webkit-appearance: none;
  appearance: none;
  display: inline-block;
  width: 10px;
  height: 10px;
  padding: 2px;
  background-clip: content-box;
  border: 1px solid #bbb;
  background-color: #222;
  border-radius: 50%;
  margin: 0 3px;
  cursor: pointer;
}

/* appearance for checked radiobutton */
input[type=radio]:checked {
  background-color: #eee;
}

input[type=radio]:focus {
  outline: none;
  border: 1px solid #eee;
}

input[type=checkbox] {
  -webkit-appearance: none;
  appearance: none;
  display: inline-block;
  width: 10px;
  height: 10px;
  padding: 2px;
  background-clip: content-box;
  border: 1px solid #bbb;
  background-color: #222;
  border-radius: 50%;
  margin: 0 3px;
  cursor: pointer;
}

/* appearance for checked checkbox */
input[type=checkbox]:checked {
  background-color: #eee;
}

input[type=checkbox]:focus {
  outline: none;
  border: 1px solid #eee;
}

input[type=checkbox]:disabled {
  border: 1px solid #444;
}

input[type=checkbox]:disabled:checked {
  background-color: #444;
}

input[type=file] {
  font-family: inherit;
  font-size: 10px;;
  color: #eee;
}

input[type=file]:focus {
  border: none;
  outline: none;
}

input[type=file]:focus::-webkit-file-upload-button {
  border: 1px solid #eee;
}

input[type=file] button {
  font-family: inherit;
  font-size: inherit;
  color: #eee;
}

::-webkit-file-upload-button { /*Input file button styling*/
  font-family: inherit;
  font-size: 12px;
  color: inherit;
  background: none;
  border: 1px solid #bbb;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}

::-webkit-file-upload-button:hover {
  background-color: #333;
}

input[type=submit] {
  font-family: inherit;
  font-size: 12px;
  color: inherit;
  background: none;
  border: 1px solid #bbb;
  border-radius: 4px;
  outline: none;
  cursor: pointer;
}

input[type=submit]:hover {
  background-color: #333;
}

input[type=submit]:focus {
  border: 1px solid #eee;
}

input[type=range] {
  background: linear-gradient(to right, #bbb 0%, #bbb 0%, #444 0%, #444 100%);
  height: 5px;
  border-radius: 5px;
  outline: none;
  -webkit-appearance: none;
}

input[type=range]:focus::-webkit-slider-thumb {
  background-color: #eee;
}

input[type=range]::-webkit-slider-thumb {
  -webkit-appearance: none;
  background: #ccc;
  height: 10px;
  width: 10px;
  border-radius: 50%;
  outline: none;
}

select {
    -webkit-appearance: button;
    -webkit-user-select: none;
    -webkit-padding-end: 20px;
    -webkit-padding-start: 2px;
    background-color: #222; /* Fallback color if gradients are not supported */
    color: #bbb;
    font-size: inherit;
    font-family: inherit;
    margin-right: 10px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    border: 0;
    width: 100px;
    height: 20px;
}

select:focus {
  outline: none;
}

select:hover {
  color: #eee;
}

select:disabled {
  color: #888;
}

textarea {
  font-family: inherit;
  font-size: inherit;
}

pre {
  font-family: inherit;
}

#first {
  border: 0px;
}

.root {
  display: flex;
  flex-direction: column;
  background-color: #222;
  height: 100vh;
  width: 100vw;
  max-width: 100vw;
}

.drag {
  -webkit-app-region: drag;
  width: 100%;
  height: 22px;
  display: flex;
  align-items: flex-end;
  justify-content: flex-end;
  font-size: 9px;
  color: #bbb;
  padding-right: 10px;
  user-select: none;
}

.bw {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  margin-bottom: 50px;
  margin-top: auto;
  margin-left: 7px; /*due to button paddings in nav*/
  font-size: 9px;
}

.drag .loading {
  display: flex;
  align-items: center;
  width: 10px;
  height: 10px;
  margin-bottom: 3px;
}

.login {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.login .main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-height: 75px;
}

.login .artist-and-pw {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.header {
  display: flex;
  flex-direction: row;
  align-items: stretch;
  padding-left: 5px;
  padding-right: 10px;
  margin-top: 5px;
  height: 26px;
}

.header.darwin {
  margin-top: 3px;
}
.header .header-right {
  display: flex;
  flex-direction: row;
  align-items: center;
  margin-left: auto;
}

.header button {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-right: 5px;
  stroke: #bbb;
}

.header button:hover {
  stroke: #eee;
}

.header button:focus {
  stroke: #eee;
}

.header button:disabled {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  stroke: #444;
}

.header .refresh {
  display: flex;
  align-items: center;
  justify-content: center;
  stroke: #bbb;
}

.header .refresh:hover {
  stroke: #eee;
}
/* ... */

